# note.verse.ai

./: .gitignore  README.md  main.py  pyproject.toml  test_embed_endpoint.py  test_main.http
PoC/: scrapping.py  test.py
src/: settings.py
src/apps/course_helper_agent/: graph.py  setup_index.py  state.py  tool.py  utils.py
src/apps/course_helper_agent/nodes/: generate.py  retrieval.py
src/apps/school_web_site_agent/: context.py  orchestrator.py  run.py  scrapper_agent.py  state.py  tools.py  yonetmelik_agent.py
src/core/: llm.py  vector_store.py  vector_store_file_add.py
src/scripts/: create_collection.py
