[project]
name = "note-verse-ai"
version = "0.1.0"
description = "NoteVerse AI"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.119.0",
    "langchain>=1.0.2",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.4.0.dev0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=0.6.11",
    "playwright>=1.55.0",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.2",
    "qdrant-client>=1.7.0",
    "requests>=2.31.0",
    "uvicorn>=0.37.0",
]
